<resources>
    <string name="app_name">Big Pig Game - Nicholas Glesmann - Lab 2</string>
    <string name="title_activity_settings">Settings</string>


    <string name="welcome">Welcome To</string>
    <string name="bigPigGameName">BIG PIG</string>
    <string name="instructions2"><b>Roll the die</b> repeatedly. Accumulate points. If you roll an 8, your turn
        is over and any turn points you have are <b>lost.</b> End your turn to save your points.</string>
    <string name="instructions3">Get over <b>100 points</b> to start the <b>FINAL ROUND!</b> The other player has <b>ONE TURN</b>
    to get more points than the first player. After that, the game is over and whoever has
    the most points <b>WINS!</b></string>
    <string name="instructions4">Good luck, have fun!</string>

    <string name="player1NameLabel">Player 1</string>
    <string name="player2NameLabel">Player 2</string>
    <string name="player1Name">Player 1</string>
    <string name="player2Name">Player 2</string>
    <string name="player1ScoreLabel">Score</string>
    <string name="player2ScoreLabel">Score</string>
    <string name="player1NameEditText"></string>
    <string name="player2NameEditText"></string>
    <string name="player1ScoreTextView">0</string>
    <string name="player2ScoreTextView">0</string>
    <string name="playerTurnLabel"></string>
    <string name="pointsForTurnLabel">Points For This Turn</string>
    <string name="pointsForTurnTextView">0</string>
    <string name="rollDieButtonText">Roll Die</string>
    <string name="endTurnButtonText">End Turn</string>
    <string name="newGameButtonText">New Game</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string name="numDie_title">Number of Dice</string>
    <string name="numDie_summary">Set the number of dice you want to roll per turn (1 or 2).</string>
    <string name="numDie_default">1</string>
    <string-array name="numDie_keys">
        <item>1 Die</item>
        <item>2 Dice</item>
    </string-array>
    <string-array name="numDie_values">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="scoreToWin_title">Score To End Game</string>
    <string name="scoreToWin_summary">The score needed to trigger the last round.</string>
    <string name="scoreToWin_default">100</string>

    <string name="endTurnNumber_title">End Turn Number</string>
    <string name="endTurnNumber_summary">The die roll number that ends the turn (1–8).</string>
    <string name="endTurnNumber_default">8</string>
</resources>
